Added 95% of final flow