@@ -1,59 +1,48 @@
-package com.accenture.claims.ai.application.tool;
+package com.accenture.claims.ai.application.tool.emailFlow;
 
+import com.accenture.claims.ai.adapter.inbound.rest.chatStorage.FinalOutputJSONStore;
+import com.accenture.claims.ai.adapter.inbound.rest.helpers.LanguageHelper;
+import com.accenture.claims.ai.adapter.inbound.rest.helpers.SessionLanguageContext;
+import com.accenture.claims.ai.application.tool.DateParserTool;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import dev.langchain4j.agent.tool.Tool;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.model.chat.ChatModel;
 import dev.langchain4j.model.chat.request.ChatRequest;
+import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.request.ResponseFormat;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
 import dev.langchain4j.model.chat.request.json.JsonSchema;
-import dev.langchain4j.model.chat.response.ChatResponse;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
-import jakarta.ws.rs.Consumes;
-import jakarta.ws.rs.POST;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.Produces;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import org.jboss.resteasy.reactive.RestForm;
 
 import java.util.List;
+import java.util.Map;
+
+import static dev.langchain4j.model.chat.request.ResponseFormatType.JSON;
 
 @ApplicationScoped
-public class EmailParser2Tool {
+public class EmailParsingTool {
 
-    public static final String SYSTEM_PROMPT = """
-            You are an information extractor. Read the email content and extract ONLY the following fields:
-            {
-              "policyNumber": string|null,
-              "incidentDate": string(ISO-8601)|null,
-              "incidentLocation": string|null,
-              "reporter": {
-                "name": string|null,
-                "surname": string|null,
-                "contacts": { "email": string|null, "mobile": string|null }
-              }
-            }
-            Output MUST be a single JSON object EXACTLY with those keys.
-            If a field is missing/unknown/invalid, set it to null.
-            Do not invent values. Do not add/remove/rename fields. No comments. No code fences.
-            Input parameter: sessionId, sender, rawEmail
-            """;
     @Inject ChatModel chatModel;
+    @Inject SessionLanguageContext sessionLanguageContext;
+    @Inject LanguageHelper languageHelper;
+    @Inject FinalOutputJSONStore finalOutputJSONStore;
+    @Inject
+    DateParserTool dateParserTool;
 
     private static final ObjectMapper MAPPER = new ObjectMapper()
             .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
             .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
-    /** JSON Schema per ResponseFormat. */
+    /** ResponseFormat JSON (come prima). */
     private static final ResponseFormat RESPONSE_FORMAT = ResponseFormat.builder()
-            .type(dev.langchain4j.model.chat.request.ResponseFormatType.JSON)
+            .type(JSON)
             .jsonSchema(
                     JsonSchema.builder()
                             .name("FnolEmailExtraction")
@@ -68,7 +57,7 @@ public class EmailParser2Tool {
                                                             .addStringProperty("surname").description("Cognome del reporter; null se assente.")
                                                             .addProperty("contacts",
                                                                     JsonObjectSchema.builder()
-                                                                            .addStringProperty("email").description("Email; null se assente o non valida.")
+                                                                            .addStringProperty("email").description("Email del Sender (from); null se assente o non valida.")
                                                                             .addStringProperty("mobile").description("Numero di cellulare; null se assente.")
                                                                             .required("email", "mobile")
                                                                             .build()
@@ -105,21 +94,64 @@ public class EmailParser2Tool {
 
     @JsonIgnoreProperties(ignoreUnknown = true)
     public static final class FnolEmailExtraction {
+        public String emailId;
         public String policyNumber;
-        public String incidentDate;      // ISO 8601 o null
-        public String incidentLocation;  // <-- adesso a root
+        public String incidentDate;
+        public String incidentLocation;
         public Reporter reporter;
     }
 
+    /* ===== TOOL METHOD ===== */
 
-    /* ===== Logica comune ===== */
     @Tool(
-            name = "parseEmail2",
-            value = SYSTEM_PROMPT
+            name = "email_parsing_tool",
+            value = "Parse an FNOL email and return a strict JSON with { policyNumber, incidentDate (ISO-8601), " +
+                    "incidentLocation, reporter { name, surname, contacts { email, mobile } } }. " +
+                    "Parameters: sessionId, emailId, from, mailMessage. Returns: JSON string; missing/uncertain fields -> null."
     )
-    public FnolEmailExtraction doExtract(String sessionId, String sender, String rawEmail) {
-        if (sender == null || rawEmail == null || isBlank(sender) || isBlank(rawEmail)) {
-            return nulls();
+    public String email_parsing_tool(String sessionId, String emailId, String senderEmail, String mailMessage) {
+        // Basic guard
+        if ((senderEmail == null || senderEmail.isBlank()) && (mailMessage == null || mailMessage.isBlank())) {
+            try {
+                FnolEmailExtraction empty = nulls();
+                storePartialResult(sessionId, emailId, empty);
+                return MAPPER.writeValueAsString(empty);
+            } catch (Exception e) {
+                return "{}";
+            }
+        }
+
+        // lingua (se impostata in sessione)
+        String lang = sessionLanguageContext != null ? sessionLanguageContext.getLanguage(sessionId) : "en";
+
+        // prompt system (db o fallback)
+        String sys = """
+            You are an information extractor. Read the email content and extract ONLY the following fields:
+            {
+              "policyNumber": string|null,
+              "incidentDate": string(ISO-8601)|null,
+              "incidentLocation": string|null,
+              "reporter": {
+                "name": string|null,
+                "surname": string|null,
+                "contacts": { "email": string|null, "mobile": string|null }
+              }
+            }
+            Output MUST be a single JSON object EXACTLY with those keys.
+            If a field is missing/unknown/invalid, set it to null.
+            Do not invent values. Do not add/remove/rename fields. No comments. No code fences.
+            """;
+
+        try {
+            if (languageHelper != null) {
+                LanguageHelper.PromptResult p =
+                        languageHelper.getPromptWithLanguage(lang, "fnol.email.parsingPrompt");
+                if (p != null && p.prompt != null && !p.prompt.isBlank()) {
+                    sys = languageHelper.applyVariables(p.prompt, Map.of());
+                }
+            }
+        } catch (Exception ignore) {
+            // usa fallback
         }
 
         String user = """
@@ -130,40 +162,64 @@ public class EmailParser2Tool {
             %s
             --------------------
             Return ONLY the JSON object.
-            """.formatted(safe(sender), safe(rawEmail));
+            """.formatted(safe(senderEmail), safe(mailMessage));
 
         try {
             ChatRequest chatRequest = ChatRequest.builder()
-                    .messages(List.of(
-                            SystemMessage.from(SYSTEM_PROMPT),
-                            UserMessage.from(user)
-                    ))
+                    .messages(List.of(SystemMessage.from(sys), UserMessage.from(user)))
                     .responseFormat(RESPONSE_FORMAT)
                     .build();
 
             ChatResponse chatResponse = chatModel.chat(chatRequest);
             String raw = chatResponse.aiMessage().text();
-
             String json = extractFirstJsonObject(raw);
 
             FnolEmailExtraction out = MAPPER.readValue(json, FnolEmailExtraction.class);
-            sanitize(out);
-            return out != null ? out : nulls();
+            sanitize(out, senderEmail);
+            postProcessIncidentDate(sessionId, mailMessage, out);
+
+            storePartialResult(sessionId, emailId, out);
+
+            return MAPPER.writeValueAsString(out);
 
         } catch (Exception e) {
-            return nulls();
+            // Fallback: oggetto con tutti i campi a null + salvataggio
+            try {
+                FnolEmailExtraction fallback = nulls();
+                storePartialResult(sessionId, emailId, fallback);
+                return MAPPER.writeValueAsString(fallback);
+            } catch (Exception ex) {
+                return "{}";
+            }
         }
     }
 
     /* ===== Helpers ===== */
+
     private static String safe(String s) { return s == null ? "" : s; }
-    private static boolean isBlank(String s) { return s == null || s.trim().isEmpty(); }
+
+    private void storePartialResult(String sessionId, String emailId, FnolEmailExtraction data) {
+        if (finalOutputJSONStore == null || sessionId == null || sessionId.isBlank() || data == null) return;
+        try {
+            data.emailId = emailId;
+            ObjectNode patch = MAPPER.valueToTree(data);
+
+            System.out.println("===================== PARTIAL RESULT ======================");
+            System.out.println(MAPPER.writeValueAsString(patch));
+            System.out.println("===================== END PARTIAL RESULT ======================");
+
+            finalOutputJSONStore.put("email_parsing_result", sessionId, null, patch);
+
+        } catch (Exception ignore) {
+            // non propagare errori di persistenza
+        }
+    }
 
     private static FnolEmailExtraction nulls() {
         FnolEmailExtraction o = new FnolEmailExtraction();
         o.policyNumber = null;
         o.incidentDate = null;
-        o.incidentLocation = null;  // <-- root
+        o.incidentLocation = null;
         o.reporter = new Reporter();
         o.reporter.name = null;
         o.reporter.surname = null;
@@ -173,7 +229,7 @@ public class EmailParser2Tool {
         return o;
     }
 
-    private static void sanitize(FnolEmailExtraction o) {
+    private static void sanitize(FnolEmailExtraction o, String senderEmail) {
         if (o == null) return;
         if (isBlank(o.policyNumber)) o.policyNumber = null;
         if (isBlank(o.incidentDate)) o.incidentDate = null;
@@ -186,8 +242,39 @@ public class EmailParser2Tool {
         if (o.reporter.contacts == null) o.reporter.contacts = new Contacts();
         if (isBlank(o.reporter.contacts.email)) o.reporter.contacts.email = null;
         if (isBlank(o.reporter.contacts.mobile)) o.reporter.contacts.mobile = null;
+        if (o.reporter != null && o.reporter.contacts != null) {
+            if (isBlank(o.reporter.contacts.email)) {
+                if (senderEmail != null) {
+                    o.reporter.contacts.email = senderEmail;
+                }
+            }
+        }
     }
 
+    private void postProcessIncidentDate(String sessionId, String mailMessage, FnolEmailExtraction out) {
+        if (out == null) return;
+        if (isBlank(out.incidentDate) || !isIso8601Utc(out.incidentDate)) {
+            try {
+                String iso = dateParserTool.normalize(sessionId, mailMessage);
+                if (iso != null && !iso.isBlank()) {
+                    out.incidentDate = iso;
+                }
+            } catch (Exception ignore) {
+                // resta a null
+            }
+        }
+    }
+
+    private static boolean isIso8601Utc(String s) {
+        if (s == null) return false;
+        String t = s.trim();
+        // YYYY-MM-DDThh:mm:ssZ
+        return t.matches("\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z");
+    }
+
+    private static boolean isBlank(String s) { return s == null || s.trim().isEmpty(); }
+
+    /** Estrae il primo oggetto JSON da una risposta verbosa. */
     private static String extractFirstJsonObject(String s) {
         if (s == null) return "{}";
         int start = s.indexOf('{');
@@ -206,4 +293,3 @@ public class EmailParser2Tool {
         return s.substring(start);
     }
 }
- 
